[package]
name = "raft-study"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["proto"]

[dependencies]
bytes = { version = "1", optional = true }
fxhash = "0.2.1"
fail = { version = "0.4", optional = true }
getset = "0.1.1"
protobuf = "2"
thiserror = "1.0"
raft-proto = { path = "proto", version = "0.1.0", default-features = false }
rand = "0.8"
slog = "2.2"
slog-envlogger = { version = "2.1.0", optional = true }
slog-stdlog = { version = "4", optional = true }
slog-term = { version = "2.4.0", optional = true }

[dev-dependencies]
slog-async = "2.3.0"
slog-envlogger = "2.1.0"
slog-stdlog = "4"
slog-term = "2.4.0"
itertools = "0.10.0"
